# remote-sensing-projects

./: .gitattributes  CHANGELOG.md  LICENSE  README.md
docs/git/: instructions_git.md  recurring_issues.md
docs/git/report/: instructions.tex
projects/00_template/: LOG.md  PROJECT_OVERVIEW.md  README.md  pyproject.toml
projects/00_template/src/template/: main.py
projects/00_template/src/template/downloaders/: download_sentinel_api.py  downloader_copernicus.py  downloader_earth_explorer.py  downloader_huggingface.py
projects/00_template/template/: main.py
projects/00_template/template/downloaders/: download_sentinel_api.py  downloader_copernicus.py  downloader_earth_explorer.py  downloader_huggingface.py
projects/01_snow_hr/: PROJECT_OVERVIEW.md  README.md  pyproject.toml
projects/01_snow_hr/src/snow_hr/: main.py
projects/02_snow_ts/: LOG.md  PROJECT_OVERVIEW.md  README.md  pyproject.toml
projects/02_snow_ts/snow_ts/: main.py
projects/02_snow_ts/src/snow_ts/: data_loading.py
projects/03_urban/: PROJECT_OVERVIEW.md  README.md  pyproject.toml
projects/03_urban/src/urban/: data_loading.py  main.py
projects/03_urban/urban/: data_loading.py
projects/04_pollution/: PROJECT_OVERVIEW.md  README.md  pyproject.toml
projects/04_pollution/pollution/: data_loading.py
projects/04_pollution/src/pollution/: data_loading.py  main.py
projects/05_forest/: PROJECT_OVERVIEW.md  README.md  pyproject.toml
projects/05_forest/forest/: data_loading.py
projects/05_forest/src/forest/: data_loading.py  main.py
projects/06_irradiance/: pyproject.toml
projects/06_irradiance/src/: data_loading.py
projects/06_meteo/: PROJECT_OVERVIEW.md  README.md  pyproject.toml
projects/06_meteo/meteo/: data_loading.py
projects/06_meteo/src/meteo/: data_loading.py  main.py
projects/07_change_detection/: PROJECT_OVERVIEW.md  README.md  pyproject.toml
projects/07_change_detection/change_detection/: main.py
projects/08_ship_detection/: .gitignore  README.md  pyproject.toml
projects/08_ship_detection/ship_detection/: data_loading.py
projects/08_ship_detection/src/ship_detection/: data_loading.py  main.py
projects/09_rs_video/: README.md  pyproject.toml
projects/09_rs_video/rs_video/: data_loading.py  main.py  paths.py
projects/09_rs_video/src/rs_video/: data_loading.py
projects/10_pansharpening/: README.md  pyproject.toml
projects/10_pansharpening/src/pansharpening/: data_loading.py  main.py
projects/11_deforestation/: README.md  pyproject.toml
projects/11_deforestation/deforestation/: main.py
projects/11_deforestation/src/deforestation/: loading_data.py  paths.py
projects/subjects/02_snow_ts/src/: data_loading.py
projects/subjects/03_urban/src/: data_loading.py
projects/subjects/04_pollution/src/: data_loading.py
projects/subjects/05_forest/: install.sh
projects/subjects/05_forest/src/: data_loading.py
projects/subjects/06_irradiance/: install.sh  pyproject.toml
projects/subjects/06_irradiance/data/raw/: readme.txt
projects/subjects/08_ship_detection/src/: data_loading.py
projects/subjects/10_pansharpening/src/: data_loading.py
projects/template/: .gitignore  README.md
