[project]
name = "snow_hr"
version = "0.1.0"
description = "High resolution snow detection"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "setuptools>=80.9.0",
]

[tool.uv.pip]
torch-backend = "auto"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["snow_hr"]

[tool.setuptools.package-dir]
"" = "."
