[project]
name = "pollution"
version = "0.1.0"
description = "Assessment of pollution levels through the TROPOMI sensor"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cartopy>=0.23.0",
    "h5netcdf>=1.6.1",
    "huggingface-hub>=0.30.2",
    "matplotlib>=3.9.4",
    "pyqt5>=5.15.11; sys_platform == 'linux'",
    "netcdf4>=1.7.2",
    "xarray>=2024.7.0",
    "setuptools>=80.9.0",
]

[tool.uv.pip]
torch-backend = "auto"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pollution"]

[tool.setuptools.package-dir]
"" = "."
