[project]
name = "change_detection"
version = "0.1.0"
description = "Detection of changes in a scene."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "setuptools>=80.9.0",
]

[tool.uv.pip]
torch-backend = "auto"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["change_detection"]

[tool.setuptools.package-dir]
"" = "."
