[project]
name = "09-rs-video"
version = "0.1.0"
description = "Analysis of remotely sensed videos."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "huggingface-hub>=0.33.0",
    "matplotlib>=3.9.4",
    "opencv-python-headless>=4.11.0.86",
    "pyqt5>=5.15.11; sys_platform == 'linux'",
    "setuptools>=80.9.0",
]

[tool.uv.pip]
torch-backend = "auto"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
