[project]
name = "pansharpening"
version = "0.1.0"
description = "Data fusion through pansharpening."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=0.30.2",
    "imageio>=2.37.0",
    "matplotlib>=3.9.4",
    "pyqt5>=5.15.11; sys_platform == 'linux'",
    "setuptools>=80.9.0",
]

[tool.uv.pip]
torch-backend = "auto"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
