[project]
name = "deforestation"
version = "0.1.0"
description = "Analysis of deforestation of the Amazon forest."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "huggingface-hub>=0.30.2",
    "matplotlib>=3.9.4",
    "pyqt5>=5.15.11; sys_platform == 'linux'",
    "setuptools>=80.9.0",
]

[tool.uv.pip]
torch-backend = "auto"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
